# slim

./: .gitignore  .lycheecache  Taskfile.yaml  versions.json
data-plane/integrations/mcp-proxy/: CHANGELOG.md  Cargo.toml
dev/: 404.html  (+3 more)
mkdocs/: README.md  hooks.py  mkdocs.yml  pyproject.toml
mkdocs/overrides/: home.html
mkdocs/overrides/partials/: copyright.html  header.html  logo.html
mkdocs/site/: 404.html  index.html  objects.inv  sitemap.xml  versions.json
mkdocs/site/assets/: service_compositon.drawio
mkdocs/site/coffee-agntcy/get-started/: index.html
mkdocs/site/coffee-agntcy/identity-coffee-agntcy/: index.html
mkdocs/site/coffee-agntcy/slim-coffee-agntcy/: index.html
mkdocs/site/contributing/: index.html
mkdocs/site/csit/csit/: index.html
mkdocs/site/dir/ads-records/: index.html
mkdocs/site/dir/architecture/: index.html
mkdocs/site/dir/dir-api-reference/: index.html
mkdocs/site/dir/directory-cli/: index.html
mkdocs/site/dir/directory-gui/: index.html
mkdocs/site/dir/directory-sdk/: index.html
mkdocs/site/dir/events/: index.html
mkdocs/site/dir/federation-profiles/: index.html
mkdocs/site/dir/federation-troubleshooting/: index.html
mkdocs/site/dir/getting-started/: index.html
mkdocs/site/dir/overview/: index.html
mkdocs/site/dir/partner-prod-federation/: index.html
mkdocs/site/dir/prod-deployment/: index.html
mkdocs/site/dir/runtime/: index.html
mkdocs/site/dir/scenarios/: index.html
mkdocs/site/dir/trust-model/: index.html
mkdocs/site/dir/validation/: index.html
mkdocs/site/glossary/: index.html
mkdocs/site/how-to-guides/agent-directory/: index.html
mkdocs/site/how-to-guides/identity-quickstart/: index.html
mkdocs/site/identity/arch_diagrams/: index.html
mkdocs/site/identity/connecting_idp/: index.html
mkdocs/site/identity/creating_identities/: index.html
mkdocs/site/identity/creating_policies/: index.html
mkdocs/site/identity/credentials/: index.html
mkdocs/site/identity/flow/: index.html
mkdocs/site/identity/identifier_examples/: index.html
mkdocs/site/identity/identifiers/: index.html
mkdocs/site/overview/: index.html
mkdocs/site/search/: search_index.json
mkdocs/site/slim-a2a/: index.html
mkdocs/site/slim-authentication/: index.html
mkdocs/site/slim-controller/: index.html
mkdocs/site/slim-data-plane/: index.html
mkdocs/site/slim-data-plane-config/: index.html
mkdocs/site/slim-group/: index.html
mkdocs/site/slim-group-tutorial/: index.html
mkdocs/site/slim-howto/: index.html
mkdocs/site/slim-mcp/: index.html
mkdocs/site/slim-otel/: index.html
mkdocs/site/slim-rpc/: index.html
mkdocs/site/slim-session/: index.html
mkdocs/site/slim-slimrpc-compiler/: index.html
mkdocs/site/stylesheets/: custom.css
(+271 files in other folders)
