[project]
name = "agntcy-docs"
version = "0.1.0"
description = "Agntcy documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material==9.6.12",
    "mkdocs-exclude==1.0.2",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "markdown>=3.2",
    "mkdocs>=1.3.0",
    "mkdocs-material-extensions>=1.0.3",
    "mkdocs-autorefs==1.4.1",
    "pygments>=2.12",
    "pymdown-extensions>=9.4",
    "mkdocs-git-revision-date-plugin==0.3.2",
    "mkdocstrings-python==1.16.10",
    "griffe-pydantic==1.1.4",
    "griffe==1.7.2",
    "agntcy-acp>=1.5.2",  # 1.5.x allows langgraph 0.4+ so we can use langgraph-checkpoint>=3.0
    "agntcy-iomapper==0.2.2",
    "langgraph-checkpoint>=3.0.0",  # JsonPlusSerializer RCE in "json" mode
    "llama-index>=0.12.38",  # JSONReader DoS (uncontrolled recursion) fixed in 0.12.38
    "llama-index-core>=0.12.38,<0.13",  # pin to 0.12.x so resolver does not pick 0.13.0 on Python 3.12.4+
    "nltk>=3.9.3",  # CVE-2025-14009: zip slip / RCE in downloader
    "orjson>=3.11.6",  # CVE-2025-67221: recursion limit for deeply nested JSON
    "pillow>=12.1.1",  # CVE-2025-48379, CVE-2026-25990
    "beautifulsoup4>=4.13.3",
    "mkdocs-swagger-ui-tag==0.7.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-redirects>=1.2.0",
    # Linting and testing tools
    "codespell>=2.2.0",
    "pymarkdownlnt>=0.9.0",
    "mkdocs-htmlproofer-plugin>=1.0.0",
    "certifi>=2025.1.31",
]
