[package]
name = "agntcy-slim-mcp-proxy"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Proxy for exposing a native MCP server over SLIM"

[package.metadata.cargo-machete]
ignored = [
    "agntcy-slim",
    "agntcy-slim-auth",
    "agntcy-slim-config",
    "agntcy-slim-controller",
    "agntcy-slim-datapath",
    "agntcy-slim-service",
    "agntcy-slim-signal",
    "agntcy-slim-tracing",
]

[[bin]]
name = "slim-mcp-proxy"
path = "src/main.rs"

[dependencies]
agntcy-slim = { path = "../../core/slim", version = "0.5.0" }
agntcy-slim-auth = { path = "../../core/auth", version = "0.3.0" }
agntcy-slim-config = { path = "../../core/config", version = "0.3.0" }
agntcy-slim-datapath = { path = "../../core/datapath", version = "0.9.0" }
agntcy-slim-service = { path = "../../core/service", version = "0.6.0" }
agntcy-slim-signal = { path = "../../core/signal", version = "0.1.3" }
async-trait = "0.1"
clap = "4.5.37"
futures-util = "0.3.31"
rand = "0.9.1"
rmcp = { version = "0.1.5", features = ["client", "transport-sse"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
